1.21 update. Import all changes as of commit a5a3808 from Patbox/Image2Map