@@ -10,6 +10,7 @@ import com.mojang.brigadier.suggestion.Suggestions;
 import com.mojang.brigadier.suggestion.SuggestionsBuilder;
 import com.mojang.logging.LogUtils;
 import eu.pb4.sgui.api.GuiHelpers;
+import me.lucko.fabric.api.permissions.v0.Permissions;
 import net.fabricmc.api.ModInitializer;
 import net.fabricmc.fabric.api.command.v2.CommandRegistrationCallback;
 import net.fabricmc.fabric.api.event.lifecycle.v1.ServerLifecycleEvents;
@@ -23,11 +24,10 @@ import net.minecraft.entity.decoration.ItemFrameEntity;
 import net.minecraft.entity.player.PlayerEntity;
 import net.minecraft.item.ItemStack;
 import net.minecraft.item.Items;
-import net.minecraft.nbt.NbtCompound;
-import net.minecraft.nbt.NbtElement;
-import net.minecraft.nbt.NbtList;
-import net.minecraft.nbt.NbtString;
+import net.minecraft.nbt.*;
 import net.minecraft.server.command.ServerCommandSource;
+import net.minecraft.text.HoverEvent;
+import net.minecraft.text.Style;
 import net.minecraft.text.Text;
 import net.minecraft.util.Formatting;
 import net.minecraft.util.Hand;
@@ -40,6 +40,9 @@ import net.minecraft.util.math.Vec3d;
 import net.minecraft.world.World;
 import org.jetbrains.annotations.Nullable;
 import org.slf4j.Logger;
+
+import space.essem.image2map.Image2Map.DitherMode;
+import space.essem.image2map.Image2Map.DitherModeSuggestionProvider;
 import space.essem.image2map.config.Image2MapConfig;
 import space.essem.image2map.gui.PreviewGui;
 import space.essem.image2map.renderer.MapRenderer;
@@ -47,11 +50,18 @@ import space.essem.image2map.renderer.MapRenderer;
 import javax.imageio.ImageIO;
 import java.awt.image.BufferedImage;
 import java.io.File;
+import java.net.URI;
 import java.net.URL;
 import java.net.URLConnection;
+import java.net.http.HttpClient;
+import java.net.http.HttpRequest;
+import java.net.http.HttpResponse;
+import java.time.Duration;
+import java.time.temporal.TemporalUnit;
 import java.util.List;
 import java.util.concurrent.CompletableFuture;
 import java.util.concurrent.TimeUnit;
+import java.util.concurrent.TimeoutException;
 
 import static net.minecraft.server.command.CommandManager.argument;
 import static net.minecraft.server.command.CommandManager.literal;
@@ -66,8 +76,10 @@ public class Image2Map implements ModInitializer {
     public void onInitialize() {
         CommandRegistrationCallback.EVENT.register((dispatcher, registryAccess, environment) -> {
             dispatcher.register(literal("image2map")
-                    .requires(source -> source.hasPermissionLevel(CONFIG.minPermLevel))
+                    .requires(Permissions.require("image2map.use", CONFIG.minPermLevel))
+                    .requires(Permissions.require("image2map.use", CONFIG.minPermLevel))
                     .then(literal("create")
+                            .requires(Permissions.require("image2map.create", 0))
                             .then(argument("width", IntegerArgumentType.integer(1))
                                     .then(argument("height", IntegerArgumentType.integer(1))
                                             .then(argument("mode", StringArgumentType.word()).suggests(new DitherModeSuggestionProvider())
@@ -90,6 +102,7 @@ public class Image2Map implements ModInitializer {
                             )
                     )
                     .then(literal("preview")
+                            .requires(Permissions.require("image2map.preview", 0))
                             .then(argument("path", StringArgumentType.greedyString())
                                     .executes(this::openPreview)
                             )
@@ -106,9 +119,24 @@ public class Image2Map implements ModInitializer {
 
         source.sendFeedback(() -> Text.literal("Getting image..."), false);
 
-        getImage(input).orTimeout(60, TimeUnit.SECONDS).handleAsync((image, ex) -> {
-            if (image == null || ex != null) {
-                source.sendFeedback(() -> Text.literal("That doesn't seem to be a valid image!"), false);
+        getImage(input).orTimeout(20, TimeUnit.SECONDS).handleAsync((image, ex) -> {
+            if (ex instanceof TimeoutException) {
+                source.sendFeedback(() -> Text.literal("Downloading or reading of the image took too long!"), false);
+                return null;
+            } else if (ex != null) {
+                if (ex instanceof RuntimeException ru && ru.getCause() != null) {
+                    ex = ru.getCause();
+                }
+
+                Throwable finalEx = ex;
+                source.sendFeedback(() -> Text.literal("The image isn't valid (hover for more info)!")
+                        .setStyle(Style.EMPTY.withColor(Formatting.RED).withHoverEvent(new HoverEvent(HoverEvent.Action.SHOW_TEXT, Text.literal(finalEx.getMessage())))), false);
+                return null;
+            }
+
+            if (image == null) {
+                source.sendFeedback(() -> Text.literal("That doesn't seem to be a valid image (unknown reason)!"), false);
+                return null;
             }
 
             if (GuiHelpers.getCurrentGui(source.getPlayer()) instanceof PreviewGui previewGui) {
@@ -151,11 +179,13 @@ public class Image2Map implements ModInitializer {
         return CompletableFuture.supplyAsync(() -> {
             try {
                 if (isValid(input)) {
-                    URL url = new URL(input);
-                    URLConnection connection = url.openConnection();
-                    connection.setRequestProperty("User-Agent", "Image2Map mod");
-                    connection.connect();
-                    return ImageIO.read(connection.getInputStream());
+                    try(var client = HttpClient.newHttpClient()) {
+                        var req = HttpRequest.newBuilder().GET().uri(URI.create(input)).timeout(Duration.ofSeconds(30))
+                                .setHeader("User-Agent", "Image2Map mod").build();
+
+                        var stream = client.send(req, HttpResponse.BodyHandlers.ofInputStream());
+                        return ImageIO.read(stream.body());
+                    }
                 } else if (CONFIG.allowLocalFiles) {
                     File file = new File(input);
                     return ImageIO.read(file);
@@ -163,7 +193,7 @@ public class Image2Map implements ModInitializer {
                     return null;
                 }
             } catch (Throwable e) {
-                return null;
+                throw new RuntimeException(e);
             }
         });
     }
@@ -184,9 +214,24 @@ public class Image2Map implements ModInitializer {
 
         source.sendFeedback(() -> Text.literal("Getting image..."), false);
 
-        getImage(input).orTimeout(60, TimeUnit.SECONDS).handleAsync((image, ex) -> {
-            if (image == null || ex != null) {
-                source.sendFeedback(() -> Text.literal("That doesn't seem to be a valid image!"), false);
+        getImage(input).orTimeout(20, TimeUnit.SECONDS).handleAsync((image, ex) -> {
+            if (ex instanceof TimeoutException) {
+                source.sendFeedback(() -> Text.literal("Downloading or reading of the image took too long!"), false);
+                return null;
+            } else if (ex != null) {
+                if (ex instanceof RuntimeException ru && ru.getCause() != null) {
+                    ex = ru.getCause();
+                }
+
+                Throwable finalEx = ex;
+                source.sendFeedback(() -> Text.literal("The image isn't valid (hover for more info)!")
+                        .setStyle(Style.EMPTY.withColor(Formatting.RED).withHoverEvent(new HoverEvent(HoverEvent.Action.SHOW_TEXT, Text.literal(finalEx.getMessage())))), false);
+                return null;
+            }
+
+            if (image == null) {
+                source.sendFeedback(() -> Text.literal("That doesn't seem to be a valid image (unknown reason)!"), false);
+                return null;
             }
 
             int width;
@@ -260,6 +305,8 @@ public class Image2Map implements ModInitializer {
         }
     }
 
+    // Methods below related to item frame are not use in the fork
+
     public static boolean clickItemFrame(PlayerEntity player, Hand hand, ItemFrameEntity itemFrameEntity) {
         var stack = player.getStackInHand(hand);
         var bundleData = stack.getOrDefault(DataComponentTypes.CUSTOM_DATA, NbtComponent.DEFAULT).get(ImageData.CODEC);
@@ -313,7 +360,7 @@ public class Image2Map implements ModInitializer {
                 if (mapData.isSuccess() && mapData.getOrThrow().isReal()) {
                     map = map.copy();
                     var newData = mapData.getOrThrow().withDirection(right, down, facing);
-                    map.apply(DataComponentTypes.CUSTOM_DATA, NbtComponent.DEFAULT, x -> x.with(ImageData.CODEC, newData).getOrThrow());
+                    map.apply(DataComponentTypes.CUSTOM_DATA, NbtComponent.DEFAULT, x -> x.with(NbtOps.INSTANCE, ImageData.CODEC, newData).getOrThrow());
 
                     var frame = frames[mapData.getOrThrow().x() + mapData.getOrThrow().y() * width];
 
@@ -332,6 +379,7 @@ public class Image2Map implements ModInitializer {
 
         return false;
     }
+    
 
     public static boolean destroyItemFrame(Entity player, ItemFrameEntity itemFrameEntity) {
         var stack = itemFrameEntity.getHeldItemStack();
